# jnicookbook

./: .travis.yml  LICENSE  Makefile  Makefile.common  README.md  run-tests.sh
recipeNo001/: Makefile  Makefile.darwin  Makefile.linux  Makefile.macos
recipeNo002/: Makefile
recipeNo002/c/: recipeNo001_HelloWorld.c  recipeNo002_PassInt.c
recipeNo003/: Makefile
recipeNo003/c/: recipeNo003_PassDouble.c
recipeNo004/: Makefile
recipeNo004/c/: recipeNo004_PassLong.c
recipeNo005/: Makefile
recipeNo005/c/: recipeNo005_PassShort.c
recipeNo006/: Makefile
recipeNo006/c/: recipeNo006_PassChar.c
recipeNo007/: Makefile
recipeNo007/c/: recipeNo007_PassByte.c
recipeNo008/: Makefile
recipeNo008/c/: recipeNo008_PassBoolean.c
recipeNo009/: Makefile
recipeNo009/c/: recipeNo009_PassString.c
recipeNo010/: Makefile
recipeNo010/c/: recipeNo010_ReturnString.c
recipeNo011/: Makefile
recipeNo011/c/: recipeNo011_ReturnPrimitive.c
recipeNo012/: Makefile
recipeNo012/c/: recipeNo012_PassArray.c
recipeNo013/: Makefile
recipeNo013/c/: recipeNo013_PassArrayBack.c
recipeNo014/: Makefile
recipeNo014/c/: recipeNo014_CreateArray.c
recipeNo015/: Makefile
recipeNo015/c/: recipeNo015_SigSegv.c
recipeNo016/: Makefile
recipeNo016/c/: externalLib.c  recipeNo016_SigTerm.c
recipeNo017/: Makefile
recipeNo017/c/: extLib.c  extLibCompiled.c  recipeNo017_SigTerm.c  stopExit.c  stopExit.h
recipeNo018/: Makefile
recipeNo018/c/: foo.c  foo.h  (+1 more)
recipeNo019/: Makefile
recipeNoD001/: Makefile
recipeNoD001/c/: CMakeLists.txt  recipeNoD001_HelloWorld.c
(+24 files in other folders)
